fix layer visibility

--- a/src/containers/DrawingCanvas/index.css
+++ b/src/containers/DrawingCanvas/index.css
@@ -1,6 +1,6 @@
 
 .canvasContainer{
-    /* position: relative; */
+    position: relative;
     width:100%;
     margin-left:30px;
 	box-sizing: border-box;
@@ -45,8 +45,7 @@
 	flex-direction: column;
 	align-items: flex-end;
     box-sizing: border-box; 
-    margin-left:10px;
-    margin-top:10px;
+    top:50px;
     width:300px;
     /* border: 1px solid  rgba(0, 0, 0, 0.28); */
 	box-shadow: 4px 4px 0px rgba(0, 0, 0, 0.28);
